# ai-trading-alpha

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml  vercel.json
api/: health.py  portfolios.py  regime.py  risk.py
api/lib/: auth.py  db.py
config/: agents.yaml  markets.yaml  settings.py
deploy/oracle/: Dockerfile  Dockerfile.frontend  docker-compose.prod.yml  init-db.sql  nginx.conf  setup.sh
docs/: architecture.md  atlas-v2-enhancement-design.md  atlas-v4-mega-upgrade.md  claude-code-prompt.md  claude-code-prompts.md  cufa-integration.md  project-status-master-plan.md  review.md  roadmap.md
scripts/: run_benchmark.py  setup_db.py
src/agents/: CLAUDE.md  __init__.py  consensus.py  custom_strategy.py  orchestrator.py  reflection.py  single_agent.py
src/analytics/: CLAUDE.md  __init__.py  attribution.py  audit_trail.py  behavioral_profiler.py  calibration.py  comparator.py  exporter.py  metrics.py  regime_detector.py  results_store.py  walk_forward.py
src/api/: __init__.py  deps.py  main.py  middleware.py  worker.py
src/core/: CLAUDE.md  constants.py  exceptions.py  interfaces.py  logging.py  types.py
src/dashboard/: CLAUDE.md  app.py  data_loader.py
src/data/: CLAUDE.md  __init__.py  cache.py  collector.py  db.py  indicators.py  normalizer.py  scheduler.py
src/llm/: CLAUDE.md  __init__.py  base.py  call_logger.py  claude_adapter.py  cost_tracker.py  deepseek_adapter.py  gemini_adapter.py  gpt_adapter.py  hallucination_detector.py  response_parser.py
src/reports/: __init__.py  excel_report.py  pdf_report.py  report_factory.py  word_report.py
src/rl/: __init__.py  execution_timer.py  gpu_position_sizer.py  position_sizer.py
src/saas/: __init__.py  tenant.py  usage.py
src/simulator/: CLAUDE.md  __init__.py  baselines.py  multi_asset_optimizer.py  order_engine.py  pnl_calculator.py  portfolio.py  position_tracker.py  (+3 more)
tests/: conftest.py
web/: middleware.ts  package-lock.json  package.json  tailwind.config.js
(+122 files in other folders)
