[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atlas"
version = "0.1.0"
description = "AI Trading Lab for Agent Strategy — LLM x Agent Architecture Benchmark"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    # Core
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",

    # Async
    "aiohttp>=3.9",
    "httpx>=0.27",

    # LLM Providers
    "openai>=1.40",
    "anthropic>=0.40",
    "google-genai>=1.0",

    # Agent Framework
    "langgraph>=0.2",
    "langchain-core>=0.3",

    # Market Data
    "pykrx>=1.0",
    "python-kis>=1.0",
    "fredapi>=0.5",
    "ccxt>=4.0",
    "python-binance>=1.0",
    "dart-fss>=0.4",
    "yfinance>=0.2",
    "feedparser>=6.0",

    # Database
    "asyncpg>=0.29",
    "redis>=5.0",
    "sqlalchemy[asyncio]>=2.0",

    # Scheduling
    "apscheduler>=3.10",

    # Analytics & Dashboard
    "pandas>=2.0",
    "numpy>=1.26",
    "scipy>=1.12",
    "scikit-learn>=1.4",
    "streamlit>=1.30",
    "plotly>=5.18",

    # Utilities
    "python-dotenv>=1.0",
    "structlog>=24.0",
    "uuid7>=0.1",
    "nest-asyncio>=1.6",
]

[project.optional-dependencies]
reports = [
    "openpyxl>=3.1",
    "python-docx>=1.1",
    "reportlab>=4.0",
]
gpu = [
    "torch>=2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "pytest-mock>=3.12",
    "ruff>=0.3",
    "mypy>=1.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests that call external APIs (deselect with '-m \"not integration\"')",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ANN", "B", "SIM"]
ignore = ["ANN101", "ANN102", "ANN401"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
